--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
           padding: 0.5rem 2rem;
         }
       }
+
+      @media (max-width: 420px) {
+        .contact-info {
+          margin-top: -4.5rem;
+          bottom: -5px;
+          font-size: 8px;
+        }
+
+        .contact-info div .material-icons {
+          font-size: 20px !important;
+        }
+
+        .location-link {
+              margin-bottom: 0;
+        }
+      }
     </style>
   </head>
   <body>
